test/test-suits/errors/test-07-freelink_on_top_level/input.dhl
A -> a(B, C), C -> g
